fix: css on mobile

--- a/linktree/src/styles/global.scss
+++ b/linktree/src/styles/global.scss
@@ -12,6 +12,7 @@ html {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  font-size: 16px;
 }
 
 body {
